[workspace]
members = ["."]

[package]
name = "lootbox"
version = "1.0.0"
edition = "2021"

[workspace.dependencies]
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = "4.3"
actix-web-lab = "0.19"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23", features = ["tokio-comp"] }
uuid = { version = "1.3", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"

[dependencies]
actix-files = { workspace = true }
actix-session = { workspace = true, features = ["cookie-session"] }
actix-web = { workspace = true }
actix-web-lab = { workspace = true }
async-stream = "0.3"
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }

[[test]]
name = "test"
path = "tests/test.rs"